@@ -7,7 +7,7 @@ import java.util.List;
 A combination is a way of selecting items from a group, where the order of selection does not matter.
 A combination is a way of selecting r objects from a set of n distinct objects without regard to the order in which they are selected.
 
-Ex: For array {1, 2, 3} possible size 2 combination are:
+Ex: For array {1, 2, 3} possible size k=2 combination are:
 [1, 2], [1, 3], [2, 3]
 
 pair (1,2) != (2,1)
@@ -39,7 +39,7 @@ public class Combination {
         for (int i = start; i < arr.length; i++) {
             currList.add(arr[i]);
             combination(arr, k, i + 1, currList); // Include the current element and move forward
-            currList.remove(currList.size() - 1);  // Backtrack to exclude the current element
+            currList.removeLast();  // Backtrack to exclude the current element
         }
     }
 
